<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/curve_bg"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="@dimen/h3">


    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/don_t_worry_resetting_your_password_is_easy_n_just_type_your_mobile_number_registered_n_with_lionmiles"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="2">


        <EditText
            android:id="@+id/fp_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/h2"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/h2"
            android:background="@drawable/black_border_bg"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/enter_mobile_number_membership_id"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fp_forgot_pw_btn"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradiant_button"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@color/btn_text_color"
            android:textSize="14dp"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>
