<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="cancel_success.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/your_account_deleted_request_has_been_cancelled_successfully"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtn"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/gradiant_button"
            android:backgroundTint="@color/orange"
            android:text="@string/back_to_login"
            android:textColor="@color/white"
            android:textAllCaps="false" />


    </LinearLayout>


</androidx.cardview.widget.CardView>