<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:tint="@color/orange"
                android:src="@drawable/ic_close" />

        </androidx.cardview.widget.CardView>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="cancel_info.json"
            app:lottie_loop="true" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/your_account_deletion_request_has_been_sent_to_admin_kindly_find_the_account_datils_below"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_cancellation_user"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/_2_name"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="- -"
                            android:textColor="@color/black"
                            android:textSize="12dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="end"
                            android:text="@string/_1_membership_id"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/membershipId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="end"
                            android:text="- -"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/_3_email_id"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/emailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="- -"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="end"
                            android:text="@string/_4_date_of_request"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/dateOfRequest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="end"
                            android:text="- -"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/_5_status"
                        android:textColor="@color/grey" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="- -"
                        android:textColor="@color/black"
                        android:textSize="12dp" />

                </LinearLayout>

                <!--  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="15dp"
                      android:layout_marginEnd="15dp"
                      android:orientation="horizontal"
                      android:weightSum="2">

                      <TextView
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="0.95"
                          android:fontFamily="@font/robotoregular"
                          android:text="@string/_5_status"
                          android:textColor="@color/black" />

                      <TextView
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="0.1"
                          android:fontFamily="@font/robotoregular"
                          android:text=":"
                          android:textColor="@color/black" />

                      <TextView
                          android:id="@+id/status"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="0.95"
                          android:fontFamily="@font/robotomedium"
                          android:text="-"
                          android:textColor="@color/black" />
                  </LinearLayout>-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
           android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/gradiant_button"
            android:elevation="10dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/cancel_delete_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/approvedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/we_hope_you_will_consider_us_again_in_the_future_nthank_you_for_your_support"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>


</androidx.cardview.widget.CardView>